--- a/roles/jenkins/templates/job.xml
+++ b/roles/jenkins/templates/job.xml
@@ -17,7 +17,7 @@
             <configVersion>2</configVersion>
             <userRemoteConfigs>
                 <hudson.plugins.git.UserRemoteConfig>
-                    <url>https://github.com/Pappik/frontend.git</url>
+                    <url>https://github.com/Pappik/catalogue.git</url>
                 </hudson.plugins.git.UserRemoteConfig>
             </userRemoteConfigs>
             <branches>
